
BUG FIXES:
+Fix copying from OutputBuffer.
+Fix some error handling if file session handling.
+Fix some minor translation issues.
+Don't reposition caret if it was moved during a threaded load operation.
+Fix some errors with setting custom highlighting colors.
+Set highlight foreground colour to White when selection colour is dark.

#-----------------------------------------------------------------------------#

VERSION 0.4.95
DATE 06/23/2009
27th Alpha Release

NEWS:

Had planned to wait till 0.5 was ready before doing another release but there
have been too many good enhancements added due to all the great patches submitted
during this cycle to wait for the last push to 0.5 to complete before releasing.

Some of the main new features include buffer syncronziation with the codebrowser
plugin, completely re-worked vi emulation support, position history, and
clipboard ring. See below for more detailed list of changes.


NEW: [features/improvements]
+Clipboard history feature, can now cycle through recent clipboard entries when
pasting text into the document.
+Add automatic file backup option to periodically backup buffer contents.
+Add Search/Replace in selection option to find dialog.
+Remembers recent caret positions between jumps and allows for quick navigation
between them.
+Patch from (Hasan Aljudy) to show cwd and add e! command to commandbar
+Automatically show path completion list when doing an e or cd command.
+Display the documents EOL mode in the status bar.
+Add support for XText (patch from Igor Dejanovic).
+Support XText in Codebrowser (patch from Igor Dejanovic).
+Complete re-write of vi emulation support (patch from Hasan Aljudy)
+Add option to start in Normal mode by default when using vi emulation (patch from Hasan Aljudy).
+Codebrowser syncronizes with caret position. (patch from Igor Dejanovic)
+Find dialog remembers last position throughout session.
+Add support for the Cobra programming language.
+Support opening files by a uri.